# UnrealCV

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml
Source/UnrealCV/Private/Commands/: CameraHandler.cpp  ObjectHandler.cpp  ObjectHandler.h  SegmentationHandler.cpp  SegmentationHandler.h
Source/UnrealCV/Private/Controller/: ObjectAnnotator.cpp  ObjectAnnotatorPart.cpp
Source/UnrealCV/Private/Server/: UnrealcvServer.cpp
Source/UnrealCV/Public/Controller/: ObjectAnnotator.h
docs/: conf.py  index.rst  intro.rst  known_issues.rst  requirements.txt
docs/_ext/: mytoctree.py
docs/_static/: custom.css  mybadges.css
docs/docs/: assets.rst  index.rst  known_issues.rst
docs/docs/plugin/: camera_api.rst  index.rst  object_api.rst
docs/tutorials/: Only_Color_Problem_generate_images_tutorial.ipynb  data_collection.rst  generate_images_tutorial.ipynb  index.rst  installation.rst
docs/tutorials/integration/infinigen/: index.rst
docs/tutorials/plugin/: index.rst  object_api.rst
example_scripts/infinigen/: visualize_infinigen_regions.py
examples_scripts/: visualize_infinigen_bbox3d.py
notebooks/: data_collection_helpers.py  lychsim_3d_gt.ipynb  lychsim_plugin_intro.ipynb
src/lychsim/api/: api.py  client.py
src/lychsim/api/wrapper/: camera_mixin.py  object_mixin.py  wrapper.py
src/lychsim/core/: bbox.py  object.py
src/lychsim/core/scene/: scene.py
src/lychsim/tools/infinigen/: load.py
src/lychsim/utils/: __init__.py  io.py
ue_plugin/LychSim/: LychSim.uplugin
ue_plugin/LychSim/Source/LychSim/: LychSim.Build.cs
(+34 files in other folders)
